--- a/styles/global.css
+++ b/styles/global.css
@@ -24,6 +24,10 @@
   background-color: var(--secondary-color);
 }
 
+body {
+  font-size: 16px;
+}
+
 a {
   text-decoration: none;
   position: relative;
