--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,6 +31,10 @@ $border-color: rgba(0, 0, 0, 0.14);
   background-color: var(--secondary-color);
 }
 
+body {
+  font-size: 16px;
+}
+
 a {
   text-decoration: none;
   position: relative;
