--- a/styles/global.scss
+++ b/styles/global.scss
@@ -33,6 +33,7 @@ $border-color: rgba(0, 0, 0, 0.14);
 
 body {
   font-size: 16px;
+  position: relative;
 }
 
 a {
@@ -63,12 +64,108 @@ a:hover::after {
   margin: 0 10px;
 }
 
-header {
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 1;
+  transition: all 0.75s;
+}
+
+.hidden {
+  display: none;
+  opacity: 0;
+}
+
+header > {
   .section-1 {
     display: grid;
     grid-template-columns: 3fr 5fr 2fr;
     padding: 15px 3%;
     border-bottom: 2px solid var(--primary-color);
+    .drawer-menu {
+      display: none;
+      button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        img {
+          width: 30px;
+        }
+      }
+      .drawer {
+        background-color: white;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 60%;
+        height: 100vh;
+        transform: translateX(100vw);
+        padding: 10px 0;
+        z-index: 2;
+        transition: all 0.5s;
+        .section-1 {
+          display: flex;
+          justify-content: space-around;
+          border-bottom: 2px solid var(--primary-color);
+          .close-div {
+            .close-button {
+              cursor: pointer;
+            }
+          }
+          .brand {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img {
+              width: 35px;
+            }
+            a {
+              color: var(--primary-color);
+              font-size: 1.2em;
+            }
+          }
+        }
+        .section-2 {
+          .auth-links {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            border-bottom: 2px solid var(--primary-color);
+          }
+          .action-links {
+            border-bottom: 2px solid var(--secondary-color);
+            display: flex;
+            flex-direction: column;
+            padding: 10px 2%;
+            a {
+              display: flex;
+              justify-content: right;
+              align-items: center;
+              gap: 5px;
+              img {
+                filter: invert(64%) sepia(59%) saturate(1175%)
+                  hue-rotate(345deg) brightness(100%) contrast(103%);
+                width: 15px;
+              }
+            }
+          }
+          .navbar {
+            display: flex;
+            flex-direction: column;
+            padding: 10px 2%;
+          }
+        }
+      }
+      .drawer.on {
+        transform: translateX(0);
+      }
+    }
     .brand {
       a {
         display: flex;
@@ -156,6 +253,74 @@ header {
     .welcome-msg {
       display: flex;
       align-items: center;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    font-size: 12px;
+    .main {
+      header > {
+        .section-1 {
+          padding: 15px 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    .main {
+      header > {
+        .section-1 {
+          grid-template-columns: 3fr 4fr 3fr;
+          > {
+            .brand {
+              h1 {
+                font-size: 1em;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  body {
+    .main {
+      header > {
+        .section-1 {
+          grid-template-columns: 1fr 9fr;
+          padding: 15px 2%;
+          > {
+            .drawer-menu {
+              display: flex;
+              align-items: center;
+              #menu-btn {
+                display: block;
+              }
+              .drawer {
+              }
+            }
+            .brand {
+              display: none;
+            }
+            .user-actions {
+              display: none;
+            }
+          }
+        }
+        .section-2 {
+          justify-content: center;
+          .navbar {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
