used spacer for header

--- a/styles/global.css
+++ b/styles/global.css
@@ -76,10 +76,16 @@ a:hover::after {
 }
 
 header > .section-1 {
+  background-color: white;
   display: grid;
   grid-template-columns: 3fr 5fr 2fr;
   padding: 15px 3%;
   border-bottom: 2px solid var(--primary-color);
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 header > .section-1 .drawer-menu {
