--- a/styles/global.css
+++ b/styles/global.css
@@ -84,6 +84,10 @@ a:hover::after {
   filter: brightness(0) saturate(100%) invert(72%) sepia(46%) saturate(605%) hue-rotate(342deg) brightness(100%) contrast(98%);
 }
 
+.swiper-pagination-bullet {
+  background-color: var(--primary-color);
+}
+
 .drawer {
   background-color: white;
   position: fixed;
@@ -317,6 +321,9 @@ header > .section-2 .welcome-msg {
 }
 
 @media screen and (max-width: 640px) {
+  body {
+    font-size: 10px;
+  }
   body .main header > .section-1 {
     grid-template-columns: 1fr 9fr;
     padding: 15px 2%;
