--- a/styles/index.scss
+++ b/styles/index.scss
@@ -45,3 +45,20 @@ main {
     }
   }
 }
+
+@media screen and (max-width: 640px) {
+    .swiper-button-prev, .swiper-button-next {
+        display: none;
+    }
+    .main {
+        main {
+            .website-advertise {
+                .card {
+                    flex-direction: column-reverse;
+                    margin: 5px;
+                    padding: 5px;
+                }
+            }
+        }
+    }
+}
