made most-visted section and bit chnage on style of h4 of bestsellers section

--- a/styles/index.css
+++ b/styles/index.css
@@ -35,7 +35,13 @@ main .website-advertise .card .side-2 img {
 }
 
 main .bestsellers h4 {
-  border-right: 4px solid var(--highlights-color);
+  border-right: 4px solid var(--errors-alerts-color);
+  padding: 5px 10px;
+  font-size: 1.5em;
+}
+
+main .most-visted h4 {
+  border-right: 4px solid var(--errors-alerts-color);
   padding: 5px 10px;
   font-size: 1.5em;
 }
