--- a/styles/global.scss
+++ b/styles/global.scss
@@ -322,8 +322,11 @@ header > {
       a {
         padding: 10px;
         .row-1 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           img {
-            width: 100%;
+            width: 70%;
           }
         }
         .row-2 {
