--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,9 @@
 main {
   padding: 15px;
 }
-
 main .website-advertise {
   padding: 5px;
 }
-
 main .website-advertise .card {
   display: flex;
   justify-content: space-between;
@@ -13,33 +11,27 @@ main .website-advertise .card {
   padding: 15px 25px;
   margin: 5px 5%;
 }
-
 main .website-advertise .card .side-1 h3 {
   color: var(--primary-color);
-  font-size: 3em;
+  font-size: 2em;
 }
-
 main .website-advertise .card .side-1 p {
   color: gray;
   padding: 5px;
 }
-
 main .website-advertise .card .side-2 {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 main .website-advertise .card .side-2 img {
-  width: 55%;
+  width: 50%;
 }
-
 main .bestsellers h4 {
   border-right: 4px solid var(--errors-alerts-color);
   padding: 5px 10px;
   font-size: 1.5em;
 }
-
 main .most-visted h4 {
   border-right: 4px solid var(--errors-alerts-color);
   padding: 5px 10px;
@@ -51,7 +43,6 @@ main .most-visted h4 {
     width: 100%;
   }
 }
-
 @media screen and (max-width: 640px) {
   .swiper-button-prev, .swiper-button-next {
     display: none;
@@ -61,4 +52,4 @@ main .most-visted h4 {
     margin: 5px;
     padding: 5px;
   }
-}
+}/*# sourceMappingURL=index.css.map */
