--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,5 @@
+$border-color: rgba(0, 0, 0, 0.14);
+
 main {
   padding: 15px;
   .website-advertise {
@@ -42,6 +44,60 @@ main {
       font-size: 1.5em;
     }
   }
+  .faq-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10%;
+    .side-right {
+      h4 {
+        color: var(--primary-color);
+        font-size: 2em;
+      }
+      p {
+        color: gray;
+      }
+      ul {
+        list-style: none;
+        padding: 15px;
+        .faq-item {
+          padding: 5px;
+          label {
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid $border-color;
+            padding: 5px;
+            cursor: pointer;
+            img {
+              width: 25px;
+              transition: all .5s;
+            }
+          }
+          .faq-answer {
+            max-height: 0;
+            overflow: hidden;
+            transition: all .4s;
+          }
+          input:checked ~ .faq-answer {
+            max-height: 50px;
+          }
+          input:checked ~ label {
+            img {
+              transform: rotate(180deg);
+            }
+          }
+        }
+      }
+    }
+    .side-left {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 60%;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 1800px) {
@@ -72,6 +128,9 @@ main {
                     margin: 5px;
                     padding: 5px;
                 }
+            }
+            .faq-section {
+              flex-direction: column-reverse;
             }
         }
     }
