--- a/styles/global.scss
+++ b/styles/global.scss
@@ -539,6 +539,10 @@ footer {
           display: none;
         }
       }
+      footer {
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
 
