--- a/styles/favorites.css
+++ b/styles/favorites.css
@@ -62,3 +62,15 @@
 .main main .favorites-list .products .product a .detail .delete-product img {
   width: 25px;
 }
+
+@media screen and (max-width: 640px) {
+  .main main .favorites-list .products .product a {
+    display: flex;
+    flex-direction: column;
+  }
+  .main main .favorites-list .products .product a .image {
+    display: flex;
+    justify-content: right;
+    width: 100%;
+  }
+}
