--- a/styles/favorites.scss
+++ b/styles/favorites.scss
@@ -62,3 +62,23 @@ $border-color: rgba(0, 0, 0, 0.14);
         }
     }
 }
+
+@media screen and (max-width: 640px) {
+    .main {
+        main {
+            .favorites-list {
+                .products {
+                    .product a {
+                        display: flex;
+                        flex-direction: column;
+                        .image {
+                            display: flex;
+                            justify-content: right;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
