--- a/styles/product.css
+++ b/styles/product.css
@@ -1,3 +1,31 @@
+.image-viewer {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 1503;
+}
+
+.image-viewer button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1.5em;
+  padding: 15px 20px;
+  cursor: pointer;
+}
+
+.image-viewer img {
+  max-width: 30%;
+}
+
+.image-viewer.on {
+  display: flex;
+}
+
 .main main {
   padding: 15px 8%;
 }
@@ -17,7 +45,7 @@
   display: flex;
 }
 
-.main main .product-section .images .images-list .image {
+.main main .product-section .images .images-list .image-btn {
   background-color: transparent;
   border: 1px solid rgba(54, 54, 54, 0.14);
   border-radius: 11px;
@@ -26,7 +54,7 @@
   cursor: pointer;
 }
 
-.main main .product-section .images .images-list .image img {
+.main main .product-section .images .images-list .image-btn img {
   width: 35px;
 }
 
