--- a/styles/product.scss
+++ b/styles/product.scss
@@ -1,5 +1,31 @@
 $border-color: rgba(54, 54, 54, 0.14);
 
+.image-viewer {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 1503;
+    button {
+        background-color: transparent;
+        border: none;
+        color: white;
+        font-size: 1.5em;
+        padding: 15px 20px;
+        cursor: pointer;
+    }
+    img {
+        max-width: 30%;
+    }
+}
+
+.image-viewer.on {
+    display: flex;
+}
+
 .main {
     main {
         padding: 15px 8%;
@@ -16,7 +42,7 @@ $border-color: rgba(54, 54, 54, 0.14);
                 }
                 .images-list {
                     display: flex;
-                    .image {
+                    .image-btn {
                         background-color: transparent;
                         border: 1px solid $border-color;
                         border-radius: 11px;
